objects/Product_Collateral__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Collateral_Attachment__c</fullName>
        <label>Collateral Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Collateral_Title__c</fullName>
        <formula>Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collateral Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <label>Collateral Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presentation</fullName>
                    <default>true</default>
                    <label>Presentation</label>
                </value>
                <value>
                    <fullName>Brochure</fullName>
                </value>
                <value>
                    <fullName>Product Data Sheet</fullName>
                </value>
                <value>
                    <fullName>Success Story</fullName>
                </value>
                <value>
                    <fullName>Customer Report</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_URL__c</fullName>
        <label>Collateral URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>File_Attachment__c</fullName>
        <label>File Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Collateral</label>
    <pluralLabel>Product Collateral</pluralLabel>
</CustomObject>